--- a/delete-from-left.tex
+++ b/delete-from-left.tex
@@ -37,70 +37,57 @@
 \begin{document}
 
 \begin{center}
-    \section*{Menghitung Perkalian Faktor-Faktor}
+    \section*{Tuan Mor dan Dua Buah Kata}
 
     \begin{tabular}{ | c c | }
         \hline
-        Batas Waktu  & 2s \\    % jangan lupa ganti time limit
-        Batas Memori & 256MB \\  % jangan lupa ganti memory limit
+        Batas Waktu  & 1s \\  
+        Batas Memori & 256MB \\
         \hline
     \end{tabular}
 \end{center}
 
 \subsection*{Deskripsi}
 
-Contoh memformat teks: \textbf{bold}, \textit{italic}, \underline{underline}, $x$.
-
-Contoh membuat persamaan:
-
-\[ x_{n+1} = x_{n} - \frac{f(x_{n})}{f'(x_{n})} \]
-
-\begin{enumerate}
-    \setlength\itemsep{0pt}
-    \item Contoh penomoran.
-    \item Contoh penomoran.
-\end{enumerate}
+Tuan Mor diberi dua buah kata $A$ dan $B$. Ia dapat melakukan beberapa operasi pada kedua kata tersebut. Setiap operasi terdiri atas langkah-langkah berikut:
 
 \begin{itemize}
     \setlength\itemsep{0pt}
-    \item Contoh membuat poin-poin.
-    \item Contoh membuat poin-poin.
+    \item Pilih salah satu dari kata $A$ atau $B$ yang tidak kosong (jumlah karakter pada kata yang dipilih tidak boleh bernilai nol)
+    \item Hapus karakter pertama dari kata yang dipilih tersebut.
 \end{itemize}
 
-\begin{center}
-    Teks rata tengah
-    % Contoh gambar:
-    % \includegraphics[width=300px]{image-1}
-\end{center}
+Sebagai contoh, apabila $A = \text{saya}$ dan $b = \text{anda}$, maka pada operasi pertama Tuan Mor dapat membuat $(A,B)$ menjadi $(\text{aya}, \text{anda})$ atau $(\text{saya}, \text{nda})$.
+
+Tugas Tuan Mor adalah membuat kedua kata $A$ dan $B$ menjadi sama dengan melakukan sejumlah operasi tersebut seminimal mungkin. Kedua kata tersebut dapat menjadi kosong di akhir. Bantulah Tuan Mor untuk menentukan jumlah operasi minimal yang harus dilakukan.
 
 \subsection*{Format Masukan}
 
-Baris pertama terdiri dari satu bilangan bulat positif $N$ ($1 \leq N \leq 200.000$), menyatakan banyaknya faktor prima dari bilangan $X$.
-Baris berikutnya berisi $N$ buah bilangan $p_1$, $p_2$, $\dots$, $p_N$ ($1 \leq p_i \leq 200.000$) yang merupakan faktor-faktor prima dari $X$. Dijamin tiap $p_i$ merupakan bilangan prima.
-$N$ baris berikutnya terdiri dari 3 bilangan, dengan baris ke-$i$ menyatakan bilangan $A_i$, $B_i$, dan $C_i$.
+Baris pertama dan kedua berisi kata $A$ dan $B$ secara berturut-turut ($1 \leq |A|, |B| \leq 200.000$). Kedua kata hanya terdiri atas \textit{lowercase alphabet}.  
 
 \subsection*{Format Keluaran}
 
-Tuliskan sebuah bilangan yang merupakan bilangan yang diinginkan dalam modulo $10^9 + 7$.
+Sebuah bilangan yang merupakan jumlah operasi minimal yang dibutuhkan.
 \\
 
 \begin{multicols}{2}
 \subsection*{Contoh Masukan}
 \begin{lstlisting}
-3
-5 2 2
+saya
+anda
 \end{lstlisting}
 \columnbreak
 \subsection*{Contoh Keluaran}
 \begin{lstlisting}
--6
+6
 \end{lstlisting}
 \vfill
 \null
 \end{multicols}
 
-% \subsection*{Penjelasan}
-% Jika dibutuhkan, tambahkan penjelasan di sini
+\subsection*{Penjelasan}
+Setelah enam langkah, Tuan Mor dapat mengubah kedua kata tersebut menjadi sebuah kata yang terdiri atas satu karakter 'a'.
+Dapat dibuktikan bahwa minimal dibutuhkan enam buah langkah pada kasus uji ini.
 
 \pagebreak
 
