--- a/seleksi-ieeextreme14-maximum-odd/statement.tex
+++ b/seleksi-ieeextreme14-maximum-odd/statement.tex
@@ -62,6 +62,8 @@ Baris pertama terdiri satu buah bilangan bulat $N$ ($1 \leq N \leq 10^5$) yang m
 
 Baris berikutnya berisi $N$ buah bilangan bulat ($-10^4 \leq a_1, a_2, ..., a_n \leq 10^4$), yaitu bilangan-bilangan yang dimiliki oleh Pak Wengki.
 
+Dipastikan akan ada minimal 1 buah \textit{subsequence} dengan jumlahan ganjil.
+
 \subsection*{Format Keluaran}
 
 Sebuah bilangan yang merupakan jumlahan bilangan-bilangan dari suatu \textit{subsequence} $N$ bilangan yang dimiliki Pak Wengki, bernilai ganjil, dan paling besar.
