--- a/seleksi-ieeextreme14-multiplier/statement.tex
+++ b/seleksi-ieeextreme14-multiplier/statement.tex
@@ -37,7 +37,7 @@
 \begin{document}
 
 \begin{center}
-    \section*{Tuan Mor Menebak Bilangan}
+    \section*{G. Tuan Mor Menebak Bilangan}
 
     \begin{tabular}{ | c c | }
         \hline
@@ -64,22 +64,37 @@ Tuliskan sebuah bilangan yang merupakan bilangan yang diinginkan dalam modulo $1
 \\
 
 \begin{multicols}{2}
-\subsection*{Contoh Masukan}
+\subsection*{Contoh Masukan 1}
 \begin{lstlisting}
-3
-5 2 2
+2
+2 3
 \end{lstlisting}
 \columnbreak
-\subsection*{Contoh Keluaran}
+\subsection*{Contoh Keluaran 1}
 \begin{lstlisting}
-8000
+6
+\end{lstlisting}
+\vfill
+\null
+\end{multicols}
+
+\begin{multicols}{2}
+\subsection*{Contoh Masukan 2}
+\begin{lstlisting}
+1
+31
+\end{lstlisting}
+\columnbreak
+\subsection*{Contoh Keluaran 2}
+\begin{lstlisting}
+31
 \end{lstlisting}
 \vfill
 \null
 \end{multicols}
 
 \subsection*{Penjelasan}
-Seluruh faktor positif dari $X = 5 \times 2 \times 2 = 20$ adalah $\{ 1,2,4,5,10,20 \}$. Perkalian mereka semua adalah $8000$.
+Pada contoh masukan 1, seluruh faktor positif dari $X = 2 \times 3 = 6$ adalah $\{ 1,2,3,6 \}$. Perkalian mereka semua adalah $36$.
 
 \pagebreak
 
