--- a/seleksi-ieeextreme14-delete-from-left/statement.tex
+++ b/seleksi-ieeextreme14-delete-from-left/statement.tex
@@ -49,17 +49,17 @@
 
 \subsection*{Deskripsi}
 
-Tuan Mor diberi dua buah kata $A$ dan $B$. Ia dapat melakukan beberapa operasi pada kedua kata tersebut. Setiap operasi terdiri atas langkah-langkah berikut:
+Tuan Mor diberi dua buah kata $A$ dan $B$. Ia dapat melakukan beberapa operasi pada kedua kata tersebut. Sebuah operasi terdiri atas langkah-langkah berikut:
 
 \begin{itemize}
     \setlength\itemsep{0pt}
-    \item Pilih salah satu dari kata $A$ atau $B$ yang tidak kosong (jumlah karakter pada kata yang dipilih tidak boleh bernilai nol)
+    \item Pilih salah satu dari kata $A$ atau $B$ yang tidak kosong (jumlah karakter pada kata yang dipilih tidak bernilai nol)
     \item Hapus karakter pertama dari kata yang dipilih tersebut.
 \end{itemize}
 
 Sebagai contoh, apabila $A = \text{saya}$ dan $b = \text{anda}$, maka pada operasi pertama Tuan Mor dapat membuat $(A,B)$ menjadi $(\text{aya}, \text{anda})$ atau $(\text{saya}, \text{nda})$.
 
-Tugas Tuan Mor adalah membuat kedua kata $A$ dan $B$ menjadi sama dengan melakukan sejumlah operasi tersebut seminimal mungkin. Kedua kata tersebut dapat menjadi kosong di akhir. Bantulah Tuan Mor untuk menentukan jumlah operasi minimal yang harus dilakukan.
+Tugas Tuan Mor adalah membuat kedua kata $A$ dan $B$ menjadi sama dengan melakukan sejumlah operasi tersebut seminimal mungkin. Kedua kata tersebut bisa saja menjadi kosong di akhir. Bantulah Tuan Mor untuk menentukan jumlah operasi minimal yang harus dilakukan.
 
 \subsection*{Format Masukan}
 
@@ -101,7 +101,7 @@ wwkwkwk
 \end{multicols}
 
 \subsection*{Penjelasan}
-Pada contoh masukan 1, setelah tujuh langkah, Tuan Mor dapat mengubah kedua kata tersebut menjadi kata 'napa'.
+Pada contoh masukan 1, setelah tujuh langkah, Tuan Mor dapat mengubah kedua kata tersebut menjadi kata 'apa'.
 Dapat dibuktikan bahwa minimal dibutuhkan tujuh buah langkah pada kasus uji ini.
 
 \pagebreak
