--- a/seleksi-ieeextreme14-multiplier/statement.tex
+++ b/seleksi-ieeextreme14-multiplier/statement.tex
@@ -55,8 +55,8 @@ Setelah beberapa ronde, ia akhirnya dapat menemukan pola dari fungsi $f$ tersebu
 
 \subsection*{Format Masukan}
 
-Baris pertama terdiri dari satu bilangan bulat positif $N$ ($1 \leq N \leq 200.000$) yang menyatakan banyaknya faktor prima dari bilangan yang diberikan pada ronde berikutnya.
-Baris berikutnya berisi $N$ buah bilangan $p_1$, $p_2$, $\dots$, $p_N$ ($1 \leq p_i \leq 200.000$) yang merupakan faktor-faktor prima dari bilangan yang diberikan tersebut. Dijamin tiap $p_i$ merupakan bilangan prima.
+Baris pertama terdiri dari satu bilangan bulat positif $N$ ($1 \leq N \leq 200.000$) yang menyatakan banyaknya faktor prima dari bilangan $X$ yang diberikan pada ronde berikutnya.
+Baris berikutnya berisi $N$ buah bilangan $p_1$, $p_2$, $\dots$, $p_N$ ($1 \leq p_i \leq 200.000$) yang merupakan faktor-faktor prima dari bilangan $X$ yang diberikan tersebut. Dijamin tiap $p_i$ merupakan bilangan prima.
 
 \subsection*{Format Keluaran}
 
